Fixed bug with padding on contrast

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ body {
     background-image: linear-gradient(#7178e3, #7178e3);
 }
 
-.bottom .contrast {
+.contrast {
     width: 100;
     height: 100%;
     padding: 2em;
